# rexpipe-playground

./: .gitignore  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  deploy-pages.yml
crates/rexpipe-wasm/: Cargo.toml
crates/rexpipe-wasm/src/: lib.rs
crates/rexpipe-wasm/tests/: golden.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
web/public/: index.html  smoke-test.html
web/public/pkg/: package.json  rexpipe_wasm.d.ts  rexpipe_wasm.js  rexpipe_wasm_bg.wasm  rexpipe_wasm_bg.wasm.d.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: Header.svelte  PatternField.svelte  PipelineEditor.svelte  StepCard.svelte  TextPane.svelte
web/src/lib/: codemirror-setup.ts  highlight-extension.ts  pipeline-state.svelte.ts  pipeline-state.test.ts  types.ts  wasm-bridge.ts  wasm-worker.ts
web/tests/e2e/: playground.spec.ts
