[package]
name = "rexpipe-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Justin Kindrix <jkindrix@gmail.com>"]
description = "WASM bridge crate exposing rexpipe to browser-based playgrounds"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkindrix/rexpipe-playground"
publish = false

[lib]
# wasm-pack requires cdylib for the WASM artifact and rlib for cargo test.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Depend on rexpipe as a library with only the WASM-safe `core` feature.
# During Phase 1 development this is a path dependency against a sibling
# checkout of rexpipe main (which contains the Phase 0 core/cli feature
# split merged in rexpipe PR #11). Once rexpipe ships a release with the
# `core` feature on crates.io, switch to a version dependency for more
# reproducible CI builds.
rexpipe = { path = "../../../rexpipe", default-features = false, features = ["core"] }

wasm-bindgen = "0.2.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Direct deps for engine detection in validate_pattern. Both already come
# in transitively via rexpipe (see `cargo tree`), so listing them here is
# zero cost for the WASM bundle.
regex = "1"
fancy-regex = "0.17"

# Logging from Rust to the browser console (only when the feature is enabled
# to keep the default bundle small).
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
# Optimize for size; critical for the playground's load budget.
wasm-opt = ["-Oz"]
